syntax = "proto3";

package payment;

service PaymentService {
    rpc GetPayStatus (OrderById) returns (PaymentStatus) {}
}

message OrderById {
    string orderId = 1;
}

message PaymentStatus {
    string paymentID = 1;
    string paymentStatus = 2;
    string paymentmessage = 3;
    string paymentmode = 4;
}